syntax = "proto3";
package dstk;

// Defines a partition (start, end]
message Partition {
    int64 id = 1;
    int64 modifiedOn = 2;
    bool active = 3;
    bytes start = 4;
    bytes end = 5;
    string url = 6;
}

message Partitions {
    repeated Partition parts = 1;
}

message Ex {
    //bulk of these msgs are copied from http and
    //https://cloud.google.com/apis/design/errors#generating_errors
    //incase there is an overlap with grpc codes, please remove them
    enum ExCode {
        ERR_UNSPECIFIED = 0;
        SUCCESS = 200;

        RPC_FAILED = 400;
        UNAUTHENTICATED = 401;
        PERMISSION_DENIED = 403;
        NOT_FOUND = 404;
        CONFLICT = 409;
        RESOURCE_EXHAUSTED = 429;

        NOT_IMPLEMENTED = 501;

        INVALID_ARGUMENT = 600;
        BAD_PARTITION = 601;
    }

    ExCode id = 1;
    string msg = 2;
    map<string, string> tags = 3;
}
