syntax = "proto3";
package dstk;

import "common.proto";

message DcGetReq {
  bytes key = 1;
}

message DcGetRes {
  Ex ex = 1;
  bytes value = 2;
}

message DcRemoveReq {
  bytes key = 1;
}

message DcRemoveRes {
  Ex ex = 1;
}

message DcPutReq {
  bytes key = 1;
  bytes value = 2;
  float ttl_seconds = 3;
}

message DcPutRes {
  Ex ex = 1;
}

service DcRpc {
  rpc Get (DcGetReq) returns (DcGetRes);
  rpc Put (DcPutReq) returns (DcPutRes);
  rpc Remove (DcRemoveReq) returns (DcRemoveRes);
}
